adding message page